--- a/index.html
+++ b/index.html
@@ -85,14 +85,18 @@
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/santander-demo" target="_blank">Santander Demo API</a>
           <p>API REST em Java Spring Boot, arquitetura MVC e banco relacional.</p>
+          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
+          <img src="https://img.shields.io/badge/Spring%20Boot-6DB33F?style=for-the-badge&logo=springboot&logoColor=white" alt="Spring Boot Badge">
         </div>
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/sudoku" target="_blank">Sudoku Solver</a>
           <p>Algoritmo de resolução em Java.</p>
+          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
         </div>
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/desafio-java" target="_blank">POO em Java</a>
-          <p>Exercícios práticos de Programação Orientada a Objetos.</p>
+          <p>Exercícios práticos de OOP.</p>
+          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
         </div>
       </div>
     </section>
@@ -100,11 +104,24 @@
     <section id="habilidades" class="card-section">
       <h2>Habilidades Técnicas</h2>
       <div class="cards">
-        <div class="card">Java, SQL, HTML, CSS</div>
-        <div class="card">Spring Boot, JPA/Hibernate</div>
-        <div class="card">Git, GitHub, Postman</div>
-        <div class="card">MySQL, PostgreSQL</div>
-        <div class="card">Resolução de problemas, pensamento analítico, comunicação clara, trabalho em equipe</div>
+        <div class="card">
+          Java <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
+        </div>
+        <div class="card">
+          Spring Boot <img src="https://img.shields.io/badge/Spring%20Boot-6DB33F?style=for-the-badge&logo=springboot&logoColor=white" alt="Spring Boot Badge">
+        </div>
+        <div class="card">
+          SQL <img src="https://img.shields.io/badge/MySQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white" alt="MySQL Badge">
+          <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" alt="PostgreSQL Badge">
+        </div>
+        <div class="card">
+          Git & GitHub 
+          <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white" alt="Git Badge">
+          <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Badge">
+        </div>
+        <div class="card">
+          Postman <img src="https://img.shields.io/badge/Postman-FF6C37?style=for-the-badge&logo=postman&logoColor=white" alt="Postman Badge">
+        </div>
       </div>
     </section>
   </main>
