Adicionada seção Soft Skills com ícones coloridos

--- a/index.html
+++ b/index.html
@@ -140,3 +140,24 @@
   </script>
 </body>
 </html>
+
+<section id="softskills" class="card-section">
+  <h2>Soft Skills</h2>
+  <div class="cards">
+    <div class="card">
+      💡 <strong>Resolução de Problemas</strong>
+    </div>
+    <div class="card">
+      🧠 <strong>Pensamento Analítico</strong>
+    </div>
+    <div class="card">
+      🗣️ <strong>Comunicação Clara</strong>
+    </div>
+    <div class="card">
+      🤝 <strong>Trabalho em Equipe</strong>
+    </div>
+    <div class="card">
+      ⚡ <strong>Aprendizado Rápido</strong>
+    </div>
+  </div>
+</section>
