--- a/index.html
+++ b/index.html
@@ -161,3 +161,25 @@
     </div>
   </div>
 </section>
+
+<script>
+  const menuToggle = document.getElementById('mobile-menu');
+  const navbar = document.getElementById('navbar');
+
+  menuToggle.addEventListener('click', () => {
+    navbar.classList.toggle('active');
+  });
+
+  // Animação dos cards ao rolar
+  const cards = document.querySelectorAll('.card');
+
+  const observer = new IntersectionObserver(entries => {
+    entries.forEach(entry => {
+      if(entry.isIntersecting){
+        entry.target.classList.add('show');
+      }
+    });
+  }, { threshold: 0.1 });
+
+  cards.forEach(card => observer.observe(card));
+</script>
