--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
   <header>
-<div id="social-sidebar">
-  <a href="https://www.linkedin.com/in/seu-linkedin" target="_blank" title="LinkedIn">💼</a>
-  <a href="https://github.com/LucasSchubert-Dev" target="_blank" title="GitHub">🐱</a>
-  <a href="mailto:lucas_carbonell@hotmail.com" title="E-mail">✉️</a>
-</div>
+    <div id="social-sidebar">
+      <a href="https://www.linkedin.com/in/seu-linkedin" target="_blank" title="LinkedIn">💼</a>
+      <a href="https://github.com/LucasSchubert-Dev" target="_blank" title="GitHub">🐱</a>
+      <a href="mailto:lucas_carbonell@hotmail.com" title="E-mail">✉️</a>
+    </div>
     <h1><span id="typed-text"></span><span class="cursor">&nbsp;</span></h1>
     <p>Estudante de Ciência da Computação | Backend Developer em formação</p>
     <div class="contact">
@@ -30,15 +30,18 @@
       <a href="#experiencia">Experiência</a>
       <a href="#projetos">Projetos</a>
       <a href="#habilidades">Habilidades</a>
+      <a href="#softskills">Soft Skills</a>
     </nav>
   </header>
 
   <main>
+    <!-- Perfil -->
     <section id="perfil">
       <h2>Perfil Pessoal</h2>
       <p>Sou estudante de Ciência da Computação na Universidade São Judas Tadeu, com foco em desenvolvimento backend. Tenho experiência em Java, Spring Boot, APIs e bancos de dados, adquirida em projetos acadêmicos e no Bootcamp Santander Java Backend (2025). Possuo forte capacidade analítica, gosto de resolver problemas complexos e aprender novas tecnologias.</p>
     </section>
 
+    <!-- Formação -->
     <section id="formacao" class="card-section">
       <h2>Formação Acadêmica</h2>
       <div class="cards">
@@ -53,6 +56,7 @@
       </div>
     </section>
 
+    <!-- Cursos -->
     <section id="cursos" class="card-section">
       <h2>Cursos e Certificações</h2>
       <div class="cards">
@@ -63,6 +67,7 @@
       </div>
     </section>
 
+    <!-- Experiência -->
     <section id="experiencia" class="card-section">
       <h2>Experiência Profissional</h2>
       <div class="cards">
@@ -84,49 +89,46 @@
       </div>
     </section>
 
+    <!-- Projetos -->
     <section id="projetos" class="card-section">
       <h2>Projetos no GitHub</h2>
       <div class="cards">
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/santander-demo" target="_blank">Santander Demo API</a>
           <p>API REST em Java Spring Boot, arquitetura MVC e banco relacional.</p>
-          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
-          <img src="https://img.shields.io/badge/Spring%20Boot-6DB33F?style=for-the-badge&logo=springboot&logoColor=white" alt="Spring Boot Badge">
         </div>
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/sudoku" target="_blank">Sudoku Solver</a>
           <p>Algoritmo de resolução em Java.</p>
-          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
         </div>
         <div class="card">
           <a href="https://github.com/LucasSchubert-Dev/desafio-java" target="_blank">POO em Java</a>
           <p>Exercícios práticos de OOP.</p>
-          <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
         </div>
       </div>
     </section>
 
+    <!-- Habilidades -->
     <section id="habilidades" class="card-section">
       <h2>Habilidades Técnicas</h2>
       <div class="cards">
-        <div class="card">
-          Java <img src="https://img.shields.io/badge/Java-ED8B00?style=for-the-badge&logo=openjdk&logoColor=white" alt="Java Badge">
-        </div>
-        <div class="card">
-          Spring Boot <img src="https://img.shields.io/badge/Spring%20Boot-6DB33F?style=for-the-badge&logo=springboot&logoColor=white" alt="Spring Boot Badge">
-        </div>
-        <div class="card">
-          SQL <img src="https://img.shields.io/badge/MySQL-4479A1?style=for-the-badge&logo=mysql&logoColor=white" alt="MySQL Badge">
-          <img src="https://img.shields.io/badge/PostgreSQL-316192?style=for-the-badge&logo=postgresql&logoColor=white" alt="PostgreSQL Badge">
-        </div>
-        <div class="card">
-          Git & GitHub 
-          <img src="https://img.shields.io/badge/Git-F05032?style=for-the-badge&logo=git&logoColor=white" alt="Git Badge">
-          <img src="https://img.shields.io/badge/GitHub-181717?style=for-the-badge&logo=github&logoColor=white" alt="GitHub Badge">
-        </div>
-        <div class="card">
-          Postman <img src="https://img.shields.io/badge/Postman-FF6C37?style=for-the-badge&logo=postman&logoColor=white" alt="Postman Badge">
-        </div>
+        <div class="card">Java</div>
+        <div class="card">Spring Boot</div>
+        <div class="card">SQL (MySQL / PostgreSQL)</div>
+        <div class="card">Git & GitHub</div>
+        <div class="card">Postman</div>
+      </div>
+    </section>
+
+    <!-- Soft Skills -->
+    <section id="softskills" class="card-section">
+      <h2>Soft Skills</h2>
+      <div class="cards">
+        <div class="card">💡 Resolução de Problemas</div>
+        <div class="card">🧠 Pensamento Analítico</div>
+        <div class="card">🗣️ Comunicação Clara</div>
+        <div class="card">🤝 Trabalho em Equipe</div>
+        <div class="card">⚡ Aprendizado Rápido</div>
       </div>
     </section>
   </main>
@@ -135,94 +137,55 @@
     <p>Feito com ❤️ por Lucas Carbonell Schubert</p>
   </footer>
 
+  <!-- Botão voltar ao topo -->
+  <button id="back-to-top" title="Voltar ao Topo">⬆️</button>
+
+  <!-- Scripts -->
   <script>
+    // Menu mobile
     const menuToggle = document.getElementById('mobile-menu');
     const navbar = document.getElementById('navbar');
-
     menuToggle.addEventListener('click', () => {
       navbar.classList.toggle('active');
     });
+
+    // Animação dos cards
+    const cards = document.querySelectorAll('.card');
+    const observer = new IntersectionObserver(entries => {
+      entries.forEach(entry => {
+        if(entry.isIntersecting){
+          entry.target.classList.add('show');
+        }
+      });
+    }, { threshold: 0.1 });
+    cards.forEach(card => observer.observe(card));
+
+    // Efeito de digitação
+    const typedText = document.getElementById('typed-text');
+    const textToType = "Lucas Carbonell Schubert — Backend Developer";
+    let index = 0;
+    function type() {
+      if(index < textToType.length){
+        typedText.textContent += textToType.charAt(index);
+        index++;
+        setTimeout(type, 100);
+      }
+    }
+    type();
+
+    // Botão voltar ao topo
+    const backToTop = document.getElementById('back-to-top');
+    window.onscroll = () => {
+      if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+        backToTop.style.display = "block";
+      } else {
+        backToTop.style.display = "none";
+      }
+    };
+    backToTop.onclick = () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    };
   </script>
-<button id="back-to-top" title="Voltar ao Topo">⬆️</button>
 </body>
 </html>
 
-<section id="softskills" class="card-section">
-  <h2>Soft Skills</h2>
-  <div class="cards">
-    <div class="card">
-      💡 <strong>Resolução de Problemas</strong>
-    </div>
-    <div class="card">
-      🧠 <strong>Pensamento Analítico</strong>
-    </div>
-    <div class="card">
-      🗣️ <strong>Comunicação Clara</strong>
-    </div>
-    <div class="card">
-      🤝 <strong>Trabalho em Equipe</strong>
-    </div>
-    <div class="card">
-      ⚡ <strong>Aprendizado Rápido</strong>
-    </div>
-  </div>
-</section>
-
-<script>
-  const menuToggle = document.getElementById('mobile-menu');
-  const navbar = document.getElementById('navbar');
-
-  menuToggle.addEventListener('click', () => {
-    navbar.classList.toggle('active');
-  });
-
-  // Animação dos cards ao rolar
-  const cards = document.querySelectorAll('.card');
-
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if(entry.isIntersecting){
-        entry.target.classList.add('show');
-      }
-    });
-  }, { threshold: 0.1 });
-
-  cards.forEach(card => observer.observe(card));
-</script>
-
-<script>
-  const menuToggle = document.getElementById('mobile-menu');
-  const navbar = document.getElementById('navbar');
-
-  menuToggle.addEventListener('click', () => {
-    navbar.classList.toggle('active');
-  });
-
-  // Animação dos cards ao rolar
-  const cards = document.querySelectorAll('.card');
-
-  const observer = new IntersectionObserver(entries => {
-    entries.forEach(entry => {
-      if(entry.isIntersecting){
-        entry.target.classList.add('show');
-      }
-    });
-  }, { threshold: 0.1 });
-
-  cards.forEach(card => observer.observe(card));
-</script>
-
-// Typing effect
-const typedText = document.getElementById('typed-text');
-const textToType = "Lucas Carbonell Schubert — Backend Developer";
-let index = 0;
-
-function type() {
-  if(index < textToType.length){
-    typedText.textContent += textToType.charAt(index);
-    index++;
-    setTimeout(type, 100);
-  }
-}
-
-type();
